# bootcamp_python

./: README.md
Estrutura de Dados/: README.md
Exercícios/1. Operadores de Comparação e Laços/: README.md
Exercícios/2. Estrutura de Dados/: README.md
Exercícios/2. TypeError, Type Check e Conversion/: README.md
Exercícios/3. Estruturas de Controle de Fluxo/: README.md
Exercícios/3. TypeError, Type Check e Conversion/: README.md
Exercícios/4. Typing, Listas,  Dicionário e Funções/: README.md
Exercícios/Estrutura de Dados/: README.md
Projetos/Aula09-Logger-Decorator/: exemplo00.py  pyproject.toml
Projetos/ETL com Pandas, Json e Parquet/: READEME.md  etl.py  pipeline.py  pyproject.toml
Projetos/Processando os Dados com Dicionario e lendo com Pandas/: etl.py  main.py  vendas.csv
