[tool.poetry]
name = "aula09"
version = "0.1.0"
description = ""
authors = ["Paulo Moreira <paulomoreiradatascientist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
