[tool.poetry]
name = "aula-08"
version = "0.1.0"
description = ""
authors = ["Paulo Moreira <paulomoreiradatascientist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandera = "^0.21.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
